<?xml version="1.0"?>
<package>
  <name>theta_v_ros</name>
  <version>0.0.1</version>
  <description>The thetaV driver package for ros</description>

  <maintainer email="sswan55@kaist.ac.kr">Seungwon Song</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>

  </export>
</package>
